--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -39,10 +39,15 @@ html, body {
   display: none;
 }
 
+.align {
+  align-items: center;
+}
+
 .nospace {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: center;
 }
 
 .block {
@@ -102,6 +107,7 @@ html, body {
 
 .btn {
   display: inline-block;
+  align-items: center;
   padding: 8px 18px 10px;
   text-transform: uppercase;
   border: 1px solid;
@@ -109,6 +115,7 @@ html, body {
 
 .clear, .group {
   display: block;
+  align-items: center;
 }
 
 .clear::before, .clear::after, .group::before, .group::after {
@@ -156,6 +163,7 @@ img {
 
 .imgover {
   display: inline-block;
+  align-items: center;
   position: relative;
   max-width: 100%;
 }
@@ -244,10 +252,16 @@ h1, h2, h3, h4, h5, h6, .heading {
   line-height: normal;
   font-weight: normal;
   text-transform: uppercase;
+  text-align: center;
+}
+
+p {
+  text-align: center;
 }
 
 .heading.nospace {
   margin: 0;
+  text-align: center;
 }
 
 address {
