--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -323,6 +323,8 @@
 
 #footer {
   padding: 80px 0;
+  text-align: center;
+  align-items: center;
 }
 
 #footer .heading {
@@ -835,6 +837,11 @@ input:focus, textarea:focus, *:required:focus {
   background-color: rgba(0, 0, 0, .55);
 }
 
+.btn {
+  display: flex;
+  align-items: center;
+}
+
 .btn, .btn.inverse:hover {
   color: #FFFFFF;
   background-color: #CF9C67;
@@ -906,6 +913,7 @@ input:focus, textarea:focus, *:required:focus {
 
 #pageintro {
   color: #FFFFFF;
+  text-align: center;
 }
 
 /* Content Area */
@@ -1160,6 +1168,7 @@ table a, #comments a {
   }
   #pageintro .heading {
     font-size: 2rem;
+    text-align: center;
   }
   .sectiontitle {
     max-width: none;
